# ros_visual_odometry_base

./: CMakeLists.txt  README.md  package.xml  visual_odometry_base.cpp
results/: draw_trajectory.py
results/fast_10_26/: odom_pose.txt  robot_pose.txt  visual_pose_1.txt
results/fast_10_27/: odom_pose.txt  robot_pose.txt  visual_pose_0.txt
results/fast_10_all_methods_E_ransac_points_1_2/: odom_pose.txt  robot_pose.txt  visual_pose_0.txt  visual_pose_1.txt  visual_pose_2.txt  visual_pose_3.txt  visual_pose_4.txt  visual_pose_5.txt
results/fast_10_essen_ransac/: odom_pose.txt  robot_pose.txt  visual_pose_0.txt  visual_pose_2.txt  visual_pose_3.txt  visual_pose_4.txt  visual_pose_5.txt
results/fast_10_fund_mat/: odom_pose.txt  robot_pose.txt  visual_pose_1.txt  visual_pose_2.txt  visual_pose_3.txt  visual_pose_4.txt  visual_pose_5.txt
results/fast_15_26/: odom_pose.txt  robot_pose.txt  visual_pose_0.txt
results/fast_15_27/: odom_pose.txt  robot_pose.txt  visual_pose_1.txt
results/fast_5_26/: odom_pose.txt  robot_pose.txt  visual_pose_0.txt
results/fast_5_27/: odom_pose.txt  robot_pose.txt  visual_pose_1.txt
results/sift_27/: odom_pose.txt  robot_pose.txt  visual_pose_0.txt
results/surf_10_26/: odom_pose.txt  robot_pose.txt  visual_pose_0.txt
results/surf_10_27/: odom_pose.txt  robot_pose.txt  visual_pose_1.txt
results/surf_15_26/: odom_pose.txt  robot_pose.txt  visual_pose_0.txt
results/surf_15_27/: odom_pose.txt  robot_pose.txt  visual_pose_1.txt
src/: feature_detection.h  motion_estimation.h  transformation_pose.h  visual_odometry_base.cpp
(+8 files in other folders)
